# chess

./: .nvim.json  Black.txt  Cargo.toml  README.md  White.txt  bench.asm.txt  bench.asm.unique.txt  bench.no_asm.txt  bencher.bash  chesscommon.h  legal-moves.py
src/: cutil.rs  game.rs  lib.rs  main.rs  shared.rs
src/cutil/: draw.rs  game.rs  mask.rs  piece.rs  point.rs
src/lib/: boardarray.rs  chessbyte.rs  cutil.rs  eval.rs  game.rs  heap.rs  manager.rs  mask.rs  maskset.rs  motion.rs  piece.rs  player.rs  searcher.rs  searchtree.rs  state.rs  ui.rs  zobrist.rs
src/player/: mod.rs
src/shared/: boardarray.rs  chessbyte.rs  eval.rs  heap.rs  mask.rs  maskset.rs  motion.rs  piece.rs  point.rs  searchtree.rs  state.rs  zobrist.rs
