[package]
name = "final-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
by_address = "1.2.1"
eframe = {version = "*"}
egui_extras = {version = "*", features = ["all_loaders"]}
num-traits = "0.2.19"
stanza = "0.5.1"
