[features]
use_asm = []

[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.13"
eframe = {version = "*"}
egui_extras = {version = "*", features = ["all_loaders"]}
rand_chacha = "0.3.1"
stanza = "0.5.1"
voxell_rng = "0.5.0"
